--- a/14-Playback-Controllers.Rmd
+++ b/14-Playback-Controllers.Rmd
@@ -1,4 +1,4 @@
-# Playing Back Cues and Scenes
+# Playback Controllers
 
 This chapter provides an overview of Vibe's Graphical User Interface (GUI).
 
