--- a/24-Network.Rmd
+++ b/24-Network.Rmd
@@ -1,4 +1,4 @@
-# Connecting to External Devices
+# Network
 This chapter deals with configuring, transmitting and receiving DMX over Ethernet.
 
 **The following is covered in this chapter:**
