--- a/23-Media-Servers.Rmd
+++ b/23-Media-Servers.Rmd
@@ -3,7 +3,7 @@
 
 **The following is covered in this chapter:**
 
-- 23.1 - Media Bank
+- [23.1 - Media Bank](https://vibemanual.compulite.com/media-servers.html#media-bank)
 
 ## Media Bank
 
@@ -16,7 +16,7 @@ This bank has 5 types of sub-banks:
 
 **Media – Media Bank**
 
-This sub-bank includes a quick way to trigger media files from the media server. It shows all the folders and files inside the server and lets the user decide which one to play. By default, all the folders and subfolders are visible, but once synchronizing the data with the media server through CITP (see CITP Popup) then thumbnails will be shown.
+This sub-bank includes a quick way to trigger media files from the media server. It shows all the folders and files inside the server and lets the user decide which one to play. By default, all the folders and subfolders are visible, but once synchronizing the data with the media server through CITP (see: [CITP Popup](https://vibemanual.compulite.com/connecting-to-external-devices.html#citp)) then thumbnails will be shown.
 
 ![](https://files.gitbook.com/v0/b/gitbook-x-prod.appspot.com/o/spaces%2F3kS90tLsADGm1ocbe7q9%2Fuploads%2FZuTcpOKXTIeetfKrHMc9%2Fimage.png?alt=media&token=cb71bf19-0489-4924-8a80-038c875e9548)
 
